--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-        <link rel="stylesheet" href="dist/css/style.css" crossorigin="anonymous">            
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="dist/css/style.min.css">            
         <title>AR Ativo</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <nav>
-            Nav
+            <ul class="right">
+                <li><a class="btn btn-primary" href="#search">Entrar</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Meu perfil</a></li>
+                <li><a href="#">Suporte</a></li>
+                <li><a href="#"><i class="fas fa-search"></i></a>
+                <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
         </nav>
         <container>
-            Container
+            <section id="main">
+                <h1>Certificados Digitais</h1>
+                <p class="center">com a solução ideal para atividades do seu dia-dia</p>
+                <a href="#!" class="btn btn-primary btn-lg">Encontre o seu</a>
+            </section>
         </container>    
         <footer>
             Footer
         </footer>
     </body>
+    <script
+    src="https://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+    crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
